[package]
name = "rust_log"
version = "0.3.2"
authors = ["StefanMallia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
fern = "0.6.1"
log = "0.4.17"
config_loader = {version = "0.2.0", git="https://github.com/StefanMallia/config_loader", branch="main"}
